syntax = "proto3";

package userTariff;

service UserTariffService {
    rpc FindOne (ID) returns (SingleData) {}
    rpc FindAll (Empty) returns (MultipleData) {}
    rpc Create (CreateDto) returns (SingleData) {}
    rpc Update (UpdateDto) returns (SingleData){}
    rpc Remove (ID) returns (SingleData){}
}

//paramater
message ID {
    int32 id = 1;
}

message Empty {}

//dto
message CreateDto{
    int32 user = 1; 
    int32 tariff = 2; 
    string startedAt = 3;
    string endedAt = 4;
} 

message UpdateDto{
   int32 id = 1;
   CreateDto dto = 2;
} 


//return data
message MultipleData {
    string message = 1;
    int32 statusCode = 2;
    repeated UserTariffWithRelations data = 3;
    Error error = 4;
}

message SingleData {
    string message = 1;
    int32 statusCode = 2;
    UserTariff data = 3;
    Error error = 4;
}


//entity
message UserTariff {
    int32 id = 1;
    int32 user = 2; 
    int32 tariff = 3; 
    string startedAt = 4;
    string endedAt = 5;
    string createdAt = 6;
    string lastEditedAt = 7;
}

message UserTariffWithRelations {
    int32 id = 1;
    User user = 2; 
    int32 tariff = 3; 
    string startedAt = 4;
    string endedAt = 5;
    string createdAt = 6;
    string lastEditedAt = 7;
}

message User {
    int32 id = 1;
    string phone = 2; 
    string password = 3; 
    string role = 4;
    optional int32 parkId = 5;
    string createdAt = 6;
    string lastEditedAt = 7;
}


//Error
message Error {
    string errorMessage = 1;
    int32 errorCode = 2;
}
